# phrame

./: .env.development  .env.production  .env.staging  .gitignore  index.html  manager.sh  package-lock.json  package.json
.github/workflows/: pi.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
server/: pyproject.toml
server/phrame/: main.py
service/phrame/: main.py
src/: App.css  App.tsx  Carousel.css  Carousel.tsx  ConfigProvider.tsx  Picture.css  Picture.tsx  Slide.css  Slide.tsx  SlideShow.css  SlideShow.tsx  Slideshow.tsx  Text.css  Text.tsx  Video.css  models.ts  service.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fetch.rs  main.rs  memory.rs  musing.rs
web/: package-lock.json  package.json
web/src/: App.js  index.css
