[tool.poetry]
name = "phrame"
version = "0.0.1"
description = "Backend Service for Phrame project"
authors = ["Yaneury Fermin <fermin.yaneury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
exceptiongroup = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
